samples/_failures_safe/1761629190_931e7e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_15d8d157.c: In function ‘main’:
./samples/SAFE/__tmp_15d8d157.c:159: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_15d8d157.c:158:13: error: expected declaration or statement at end of input
  158 |             if
      |             ^~
./samples/SAFE/__tmp_15d8d157.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_15d8d157.c:158:13: error: expected declaration or statement at end of input
